--- a/website/NLP.html
+++ b/website/NLP.html
@@ -95,6 +95,9 @@ li.dropdown {
 </li></ul>
 				<ul style="list-style-type: disc; font-size: 25px; font-style: italic;"><li>People are confident and optimistic about prominent digital currency titles such as Bitcoin and Ethereum as well as their supporting technologies.
 </li></ul>
+	      <ul style="list-style-type: disc; font-size: 25px; font-style: italic;"><li>Bitcoin led to heated discussions with its price surging before November 2021. However, people gradually lost interest in Bitcoin afterwards. 
+
+</li></ul>
 			</div>
 		</div>
 	</div>
