--- a/website/Conclusions.html
+++ b/website/Conclusions.html
@@ -43,7 +43,7 @@ li.dropdown {
 
 </style>
 <head>
-	<title>index</title>
+	<title>conclusion</title>
 	<meta charset="utf-8" />
 	<link href="../website-source/bootstrap.min.css" rel="stylesheet">
     <!--[if lt IE 9]>
@@ -72,11 +72,11 @@ li.dropdown {
 			    </div>
 			    <div class="collapse navbar-collapse" id="example-navbar-collapse">
 			        <ul class="nav navbar-nav">
-			            <li><a href="index.html" class="active">Home</a></li>
+			            <li><a href="index.html">Home</a></li>
 			            <li><a href="eda.html"> EDA</a></li>
 			            <li><a href="NLP.html">NLP</a></li>
 			            <li><a href="ML.html"> ML</a></li>
-			            <li><a href="Conclusions.html">Conclusions</a></li>
+			            <li><a href="Conclusions.html" class="active">Conclusions</a></li>
 			        </ul>
 			    </div>
 			    </div>
@@ -84,48 +84,25 @@ li.dropdown {
 			
 	</div>
     <div>
-		<a href="javaScript:;"><img src="../images/index.jpg" class="imga" alt="c"></a>
+		<a href="javaScript:;"><img src="../images/conclusion.jpg" class="imga" alt="c"></a>
 	</div>
 	<div class="overview container">
 	  <div class="tit">
-			<h2> Introduction of Project </h2>
+			<h2> Conclusion of Project </h2>
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-7 left">
-			  <ul style="list-style-type: disc; font-size: 25px; font-style: italic;"><li>Why Reddit and CryptoCurrency?</li></ul>
-				<p>Reddit is a network of communities where people can dive into their interests, hobbies and passions. It has a massive collection of forums where people can share news and content or comment on other people’s posts. The most important feature of Reddit is its anonymity. On Reddit, users can use its service without revealing any personal information. 
-</p>
-<p>At the same time, cryptocurrency transactions also embed the anonymity characteristic. Therefore, people concerned about cryptocurrencies have strong intentions to discuss crypto worlds on Reddit platform, which makes the cryptocurrency community become one of the hottest topics on Reddit. 
-</p>
-		</div>
+				<p>We will mainly study the data under the subreddit 'CryptoCurrency'</p>
+			</div>
 			<div class="col-xs-12 col-md-5 right">
 			  <img src="../images/index2.jpg" class="imgb" alt="c">
 			</div>
 		</div>
-    <br>
-		<div class="row">
-			<div class="col-xs-12 col-md-5 left">
-			  <img src="../images/intro.png" class="imgb" alt="c">
-			  <br>
-			  <br>
-			  <img src="../images/intro2.png" class="imgb" alt="c">
-			</div>
-			<div class="col-xs-12 col-md-7 right">
-			   <ul style="list-style-type: disc; font-size: 25px; font-style: italic;"><li>What to explore?</li></ul>
-				<p>Given the popularity of cryptocurrency, we would like to take a glance of people’s opinions about cryptocurrency with the craze of crypto coming one after another. In this project, we explore the data about subreddits and comments that belong to the cryptocurrency community in the past year. How much has the cryptocurrency community on Reddit grown over the period of time? Which cryptocurrency receives the most attention? What time period is the crypto discussion more heated? We expect to answer these questions by observing the data.
-</p>
-<p>
-  Furthermore, we want to dig into the text of comments and subreddits and figure out what exactly people talked about. With the popularity of cryptocurrencies, what are the most important topics or factors people care about regarding cryptocurrencies ? What’s people’s attitude on Reddit posts and comments that mention the buzzwords? These questions will be examined through different natural language processing techniques and machine learning techniques. 
-
-</p>
-			</div>
-		</div>
 	</div>
-	
 	<div class="container coffee">
 		<div class="row ">
 				<div class="tit">
-					<h2> Appendix </h2>
+					<h2>Question for this project</h2>
 				</div>
 				<h3>Business goal 1:</h3>
 				<p> EDA: How much has the cryptocurrency community on Reddit grown over the period of time in the given data and which cryptocurrency receives the most attention?</p>
@@ -162,7 +139,7 @@ li.dropdown {
 				<p>Based on the user's theme, we recommend what subreddit theme is suitable for him. Build a Naive Bayes model to determine the user's topic, and finally, use the model to suggest his own suitable topic for the new post.
 				</p>
 				<h3>Business goal 9:</h3>
-				<p>ML:We want to help Reddit to find out whether a cryptocurrency’s comment is controversial or not.</p>
+				<p>ML: We want to help Reddit to find out whether a cryptocurrency’s comment is controversial or not.</p>
 				<h3>Technical proposal:</h3>
 				<p>First, properly choose important and distinct variables that can be used to predict controversial variables(dummy variable). And then utilize regression and clustering algorithms to predict the values of controversial variables. Finally, compare the real variables and predicted variables and get the algorithm prediction accuracy and find out whether the algorithm can be put into real-world implementation.</p>
 				<h3>Business goal 10:</h3>
