--- a/website/index.html
+++ b/website/index.html
@@ -93,9 +93,9 @@ li.dropdown {
 		<div class="row">
 			<div class="col-xs-12 col-md-7 left">
 			  <ul style="list-style-type: disc; font-size: 25px; font-style: italic;"><li>Why Reddit and CryptoCurrency?</li></ul>
-				<p>Reddit is a network of communities where people can dive into their interests, hobbies and passions. It has a massive collection of forums where people can share news and content or comment on other people’s posts. The most important feature of Reddit is its anonymity. On Reddit, users can use its service without revealing any personal information. 
+				<p>Reddit is a network of communities where people can dive into their interests, hobbies, and passions. It has a massive collection of forums where people can share news and content or comment on other people’s posts. The most important feature of Reddit is its anonymity. On Reddit, users can use its service without revealing any personal information. 
 </p>
-<p>At the same time, cryptocurrency transactions also embed the anonymity characteristic. Therefore, people concerned about cryptocurrencies have strong intentions to discuss crypto worlds on Reddit platform, which makes the cryptocurrency community become one of the hottest topics on Reddit. 
+<p>At the same time, cryptocurrency transactions also embed the anonymity characteristic. Therefore, people who are interested in cryptocurrencies have strong intentions to discuss the topic on Reddit, which makes the cryptocurrency community become one of the biggest on Reddit. 
 </p>
 		</div>
 			<div class="col-xs-12 col-md-5 right">
@@ -108,14 +108,14 @@ li.dropdown {
 			  <img src="../images/intro.png" class="imgb" alt="c">
 			  <br>
 			  <br>
-			  <img src="../images/intro2.png" class="imgb" alt="c">
+			  <img src="../images/con2.png" class="imgb" alt="c">
 			</div>
 			<div class="col-xs-12 col-md-7 right">
 			   <ul style="list-style-type: disc; font-size: 25px; font-style: italic;"><li>What to explore?</li></ul>
-				<p>Given the popularity of cryptocurrency, we would like to take a glance of people’s opinions about cryptocurrency with the craze of crypto coming one after another. In this project, we explore the data about subreddits and comments that belong to the cryptocurrency community in the past year. How much has the cryptocurrency community on Reddit grown over the period of time? Which cryptocurrency receives the most attention? What time period is the crypto discussion more heated? We expect to answer these questions by observing the data.
+				<p>Given the popularity of cryptocurrency, we would like to take a glance at people’s opinions about cryptocurrency with the craze of cryptos emerging one after another. In this project, we explore the data about subreddits and comments that belong to the cryptocurrency community in the past year. How much has the cryptocurrency community on Reddit grown over the period of time? Which cryptocurrency receives the most attention? What time period is the crypto discussion more heated? We expect to answer these questions by observing and analyzing the data.
 </p>
 <p>
-  Furthermore, we want to dig into the text of comments and subreddits and figure out what exactly people talked about. With the popularity of cryptocurrencies, what are the most important topics or factors people care about regarding cryptocurrencies ? What’s people’s attitude on Reddit posts and comments that mention the buzzwords? These questions will be examined through different natural language processing techniques and machine learning techniques. 
+ Furthermore, we want to dig into the text of submissions and comments to figure out what exactly people discuss. With the popularity of cryptocurrencies, what are the most important topics or factors people care about regarding cryptocurrencies ?  What’s people’s attitude on Reddit posts and comments that mention the buzzwords? These questions will be examined through different natural language processing techniques and machine learning algorithms. 
 
 </p>
 			</div>
