--- a/website/Conclusions.html
+++ b/website/Conclusions.html
@@ -88,7 +88,7 @@ li.dropdown {
 	</div>
 	<div class="overview container">
 	  <div class="tit">
-			<h2> Conclusion of Project </h2>
+			<h2> Conclusion </h2>
 		</div>
 		<div class="row">
 			<div class="col-xs-12 col-md-7 left">
@@ -142,8 +142,8 @@ For model 1, we plan to generalize the model by training on potentially the whol
 		<div class="container">
 			<div class="row ft">
 				<div class="col-md-12 col-xs-12">
-					<h4>Contact us</h4>
-					<p>Changwen Li/ cl1479@georgetown.edu  / (315)960-6666</p>
+					<h4>Group 6</h4>
+					<p>Changwen Li/ Hanming Li / Yiping Lu / Jingyi Qi</p>
 				</div>
 			</div>
 		</div>
