--- a/website/ML.html
+++ b/website/ML.html
@@ -204,8 +204,8 @@ Where C is the number of classes (in our case C = 2), i is the index of each cla
 		<div class="container">
 			<div class="row ft">
 				<div class="col-md-12 col-xs-12">
-					<h4>Contact us</h4>
-					<p>Changwen Li/ cl1479@georgetown.edu  / (315)960-6666</p>
+					<h4>Group 6</h4>
+					<p>Changwen Li/ Hanming Li / Yiping Lu / Jingyi Qi</p>
 				</div>
 			</div>
 		</div>
